--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
-    color: white;
-    background: black;
+    color: purple;
+    background: rgb(166, 15, 15);
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
