--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     color: purple;
-    background: rgb(166, 15, 15);
+    background: rgba(20, 20, 20, 0.286);
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
