--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     color: purple;
-    background: rgba(22, 22, 21, 0.167);
+    background: black;
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
